project2/test/test_11910934_9.spl
int sum(int x, int y){
    return x+y;
}

int test_11910934_9()
{
  int x1 = 5;
  int x4 = sum(x1,x1,x1);
  x1[2] = 4;
  return 0;
}
